--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .card-grupo>label {
-    width: 100px;
+    width: 150px;
     color: rgb(80, 71, 71);
     display: block;
     
@@ -74,3 +74,7 @@ body {
 .imglogin {
     background-color:aliceblue;
 }
+.checkbox{
+    color: rgb(80, 71, 71);
+    margin-bottom: 20px;
+    }
