--- a/src/css/Estrutura.css
+++ b/src/css/Estrutura.css
@@ -3,36 +3,35 @@ html,body{
     padding: 0;
     box-sizing: border-box;
     background: #000;
+    background-image: url(../assets/PlanoDeFundo.jpgs);
 }
 
 header{
-background: yellow;
-height: 100px;
+background:#660000;
 grid-column: 1/3;
+
 }
 
 main{
     background: blue;
-    height: 500px;
-
 }
  aside{
-     background:red;
-     height: 500px;
+     background:red;   
      grid-column: 2;
    
-      
-       
 }   
 footer{
-    background: green;
-    height: 100px;
+    color: aliceblue;
     grid-column: 1/3;
+    background-color: #212529;
+    text-decoration:none;
+    align-items: center;
+   padding-left: 10%;
 }
 
-.container{
+.container-grid{
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 20vh 70vh 10vh;
+    grid-template-rows: 13vh 70vh 10vh;
     grid-gap: 10px;
 }
