--- a/src/css/login-cadastro.css
+++ b/src/css/login-cadastro.css
@@ -1,9 +1,18 @@
-body {
-    background-color: black;
-    font-family: sans-serif, 50%;
+html,body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background: #000;
     background-image: url(../assets/PlanoDeFundo.jpg);
+    font-family: sans-serif, 50%;
 }
+header{color: #000;
+   
+    }
 
+   
+   
+    
 #padrao{
     text-transform: capitalize;
     color: black;
@@ -55,6 +64,11 @@ body {
     padding: 15px;
     color: white;
     outline: 0;
+    
+}
+.tagA{
+    color: #000;
+    text-decoration: none;
 }
 
 .btn button:hover {
