--- a/src/css/header-footer.css
+++ b/src/css/header-footer.css
@@ -58,7 +58,13 @@
     color: white;
     text-decoration: none;
     background-image: linear-gradient(to right, rgb(7, 7, 7), rgb(21, 25, 29));
+    border-radius: 30px;
+    width: 30%;
+    padding: 5px;
+    color: white;
+    outline: 0;
 }
+
 .tagA-hover:hover{
     background-image: linear-gradient(to right, rgb(21, 25, 29), rgb(7, 7, 7));
 }
@@ -87,5 +93,11 @@
 
     color:#1aa3ff;
 }
-
+.center{
+    width: 100%;
+    height: 100%;
+}
+.cente p{
+    padding-top: 10%;
+}
 
