--- a/src/css/header-footer.css
+++ b/src/css/header-footer.css
@@ -101,3 +101,15 @@
     padding-top: 10%;
 }
 
+.logo{
+    
+    border-radius: 50%;
+}
+.alingLogo{
+    
+        float: left;
+        height: 50px;
+        padding: 5px 15px;
+        line-height: 20px;
+        padding-left: inherit;
+}
