--- a/src/css/header-footer.css
+++ b/src/css/header-footer.css
@@ -71,7 +71,7 @@
 
 .menu ul{
     margin:0;
-    background-color: #003d66;
+    background-color: #0f222e;
     list-style: none;
     border-bottom-left-radius: 30%; 
     border-bottom-right-radius: 30%; 
