--- a/src/css/Estrutura.css
+++ b/src/css/Estrutura.css
@@ -33,7 +33,8 @@
 }
 .imgEstante{
     border-radius: 30px;
-    width: 70%;
+    width: 25vh;
+    height: 30vh;
     box-shadow: 1px 10px 5px #cccc;
 }
 
@@ -83,3 +84,28 @@ h3{
         min-width: 560px;
     }
 }
+.navbar {
+    margin-bottom: 0;
+    border-radius: 0;
+  }
+  
+  /* Add a gray background color and some padding to the footer */
+  footer {
+    background-color: #f2f2f2;
+    padding: 25px;
+  }
+  .carousel-indicators {
+  bottom: -12px;
+  }
+  .carousel-control {
+
+   width: 8%;
+   }
+  
+   .btn2{
+     padding: 15px 12px;
+     border-radius: 0px;
+     display: block;
+     background-color: black;
+     color: #f2f2f2;
+   }
