--- a/src/css/login-cadastro.css
+++ b/src/css/login-cadastro.css
@@ -21,35 +21,35 @@ header{color: #000;
     text-transform: capitalize;
     color: black;
 }
-.card {
+.card1 {
     box-shadow: 1px 1px 5px rgba(245, 245, 245, 0.8);
     padding: 30px;
     background-color: rgb(250, 250, 250);
     border-radius: 5px;
 }
 
-.form {
+.form1 {
     width: 400px;
     margin: auto;
     padding-top: 40px;
 }
 
-.card-top {
+.card-top1 {
     text-align: center;
 }
 
-.card-grupo {
+.card-grupo1 {
     margin-bottom: 10px;
 }
 
-.card-grupo>label {
+.card-grupo1>label {
     width: 150px;
     color: rgb(80, 71, 71);
     display: block;
     
 }
 
-.card-grupo>input {
+.card-grupo1>input {
     border-radius: 5px;
     outline: 0;
     width: 100%;
@@ -57,7 +57,7 @@ header{color: #000;
     padding: 5px;
 }
 
-.card-grupo>button {
+.card-grupo1>button {
     background-image: linear-gradient(to right, rgb(229, 217, 248), rgb(151, 151, 160));
     border-radius: 30px;
     width: 40%;
@@ -71,7 +71,7 @@ header{color: #000;
     text-decoration: none;
 }
 
-.btn button:hover {
+.btn1 button:hover {
     background-image: linear-gradient(to right, rgb(130, 130, 143), rgb(229, 217, 248));
 }
 
