--- a/src/css/Estrutura.css
+++ b/src/css/Estrutura.css
@@ -19,6 +19,13 @@
    
    
 }
+#sub-card{
+    
+    background-color: rgb(250, 250, 250);
+    border-radius: 2%;
+    margin: 10%;
+    padding-bottom: 10%;
+}
 .card-bg{
     box-shadow: 1vh 1vh 5vh rgba(143, 141, 141, 0.8);
     background-color: rgb(250, 250, 250);
