--- a/src/css/Estrutura.css
+++ b/src/css/Estrutura.css
@@ -116,3 +116,17 @@ h3{
      background-color: black;
      color: #f2f2f2;
    }
+   .tagA-hover{
+    color: white;
+    text-decoration: none;
+    background-image: linear-gradient(to right, rgb(7, 7, 7), rgb(21, 25, 29));
+    border-radius: 30px;
+    width: 30%;
+    padding: 5px;
+    color: white;
+    outline: 0;
+}
+
+.tagA-hover:hover{
+    background-image: linear-gradient(to right, rgb(21, 25, 29), rgb(7, 7, 7));
+}
