--- a/src/css/Estrutura.css
+++ b/src/css/Estrutura.css
@@ -130,3 +130,11 @@ h3{
 .tagA-hover:hover{
     background-image: linear-gradient(to right, rgb(21, 25, 29), rgb(7, 7, 7));
 }
+
+.jumbotron {
+    max-width: 90vw; 
+    margin-top: 8vh; 
+    margin-left: auto; 
+    margin-right: auto;
+    border-radius: 25px;
+  }
