--- a/src/css/Estrutura.css
+++ b/src/css/Estrutura.css
@@ -38,9 +38,10 @@
     text-align: center;
     padding-top: 20px;
 }
+
 .imgEstante{
     border-radius: 30px;
-    width: 25vh;
+    width: 100%;
     height: 30vh;
     box-shadow: 1px 10px 5px #cccc;
 }
