--- a/src/css/categoria.css
+++ b/src/css/categoria.css
@@ -15,9 +15,11 @@ max-height: 50vh;
 width: 100%;
 object-fit: cover;
 padding: auto;
+transition: all 0.8s ease;
 }
 
 .carousel img:hover {
+transition: all 0.8s ease;
 max-height: 100vh;
 object-fit: fill;
 padding: auto;
